Changes from jTDS 1.2.2
=======================

08/04/2009 - Holger Rehn
 o Corrected bug [1845477], Added missing license info. 

08/03/2009 - Holger Rehn
 o Corrected bug [1802986], incorrect charset mapping between 'MAC'
   and 'ISO-8859-1'.
 o Resolved problem [1957748], Java VM is leaking memory in
   File.deleteOnExit().
   See http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6664633.

07/31/2009 - Holger Rehn
 o Corrected bug [2508201], date field is changed by 3 milliseconds.

07/28/2009 - Holger Rehn
 o Applied patch [2675463], getSchemas() now returns schemas, not database users for
   MSSQL 2005 and later.

07/26/2009 - Holger Rehn
 o Corrected bug [2021839] savepoint starts 2 transactions if it's the first operation.

07/25/2009 - Holger Rehn
 o Applied patch [1844846] jTDS cannot connect IBM/Netcool Omnibus.

07/24/2009 - Holger Rehn
 o Applied patch [1958292] native GSS/Kerberos support for jTDS using Java 6.
 o Corrected bug [2818256] a savepoint is invalid after rollback.

07/23/2009 - Holger Rehn
 o Applied patch [2084524] and improved code, adding (experimental) ASA support
   to the driver.

06/07/2008 - Brian Heineman
 o Applied patch [2093131] JDBC 4 method stubs.

09/10/2007 - Brian Heineman
 o Applied new driver base code with TDS 9.0 support created
   by Mike Hutchinson.

===============================================================================
08/22/2007 - jTDS 1.2.2 released
===============================================================================

Changes from jTDS 1.2.1
=======================

08/18/2007 - Brian Heineman
 o Applied Mike Hutchinson's fix for bug
   [1774322] Sybase nulled text fields return not null
 
08/05/2007 - Brian Heineman
 o Applied patch [1592113] NTLMv2 properties on datasource.
 o Applied patch [1236417] 64-bit support for Single Sign On (SSO)
 o Applied patch [1504761] Itanium and AMD64/EM64T 64 bit support for SSO
 o Implemented feature [1491811] sqlState code for snapshot conflict.