@@ -40,7 +40,7 @@ import java.nio.ByteBuffer;
  *
  * @author Mike Hutchinson
  * @author jTDS project
- * @version $Id: Support.java,v 1.1 2007-09-10 19:19:31 bheineman Exp $
+ * @version $Id: Support.java,v 1.2 2009-08-10 17:38:10 ickzon Exp $
  */
 class Support {
     // Constants used in datatype conversions to avoid object allocations.
@@ -56,6 +56,10 @@ class Support {
     private static final BigDecimal BIG_DECIMAL_ONE = new BigDecimal(1.0);
     private static final java.sql.Date DATE_ZERO = new java.sql.Date(0);
     private static final java.sql.Time TIME_ZERO = new java.sql.Time(0);
+    private static final BigInteger MIN_VALUE_LONG_BI = new BigInteger(String.valueOf(Long.MIN_VALUE));
+    private static final BigInteger MAX_VALUE_LONG_BI = new BigInteger(String.valueOf(Long.MAX_VALUE));
+    private static final BigDecimal MIN_VALUE_LONG_BD = new BigDecimal(String.valueOf(Long.MIN_VALUE));
+    private static final BigDecimal MAX_VALUE_LONG_BD = new BigDecimal(String.valueOf(Long.MAX_VALUE));
     private static final BigInteger MAX_VALUE_28 = new BigInteger("9999999999999999999999999999");
     private static final BigInteger MAX_VALUE_38 = new BigInteger("99999999999999999999999999999999999999");
 
@@ -178,47 +182,142 @@ class Support {
      */
     static Object convert(ConnectionImpl connection, Object x, int jdbcType, Charset charset)
             throws SQLException {
-        try {
-            switch (jdbcType) {
-                case java.sql.Types.TINYINT:
-                case java.sql.Types.SMALLINT:
-                case java.sql.Types.INTEGER:
-                    if (x == null) {
-                        return INTEGER_ZERO;
-                    } else if (x instanceof Integer) {
-                        return x;
-                    } else if (x instanceof Byte) {
-                        return new Integer(((Byte)x).byteValue() & 0xFF);
-                    } else if (x instanceof Number) {
-                        return new Integer(((Number) x).intValue());
-                    } else if (x instanceof String) {
-                        return new Integer(((String) x).trim());
-                    } else if (x instanceof Boolean) {
-                        return ((Boolean) x).booleanValue() ? INTEGER_ONE : INTEGER_ZERO;
-                    }
-                    break;
+       // handle null value
+       if (x == null) {
+           switch (jdbcType) {
+               case java.sql.Types.BIT:
+               case java.sql.Types.BOOLEAN:
+                   return Boolean.FALSE;
+   
+               case java.sql.Types.TINYINT:
+               case java.sql.Types.SMALLINT:
+               case java.sql.Types.INTEGER:
+                   return INTEGER_ZERO;
+   
+               case java.sql.Types.BIGINT:
+                   return LONG_ZERO;
+   
+               case java.sql.Types.REAL:
+                   return FLOAT_ZERO;
+   
+               case java.sql.Types.FLOAT:
+               case java.sql.Types.DOUBLE:
+                   return DOUBLE_ZERO;
 
-                case java.sql.Types.BIGINT:
-                    if (x == null) {
-                        return LONG_ZERO;
-                    } else if (x instanceof Long) {
-                        return x;
-                    } else if (x instanceof Byte) {
-                        return new Long(((Byte)x).byteValue() & 0xFF);
-                    } else if (x instanceof Number) {
-                        return new Long(((Number) x).longValue());
-                    } else if (x instanceof String) {
-                        return new Long(((String) x).trim());
-                    } else if (x instanceof Boolean) {
-                        return ((Boolean) x).booleanValue() ? LONG_ONE : LONG_ZERO;
-                    }
+               default:
+                   return null;
+           }
+       }
 
-                    break;
+       try {
+           switch (jdbcType) {
+               case java.sql.Types.TINYINT:
+                   if (x instanceof Integer) {
+                       if ((((Number)x).intValue() & 0xFFFFFF00) != 0) {
+                           throw new SQLException(Messages.get("error.convert.numericoverflow", x, getJdbcTypeName(jdbcType)), "22003");
+                       } else {
+                           return new Integer(((Number)x).byteValue());
+                       }
+                   } else if (x instanceof Boolean) {
+                       return ((Boolean) x).booleanValue() ? INTEGER_ONE : INTEGER_ZERO;
+                   } else if (x instanceof Byte) {
+                       return new Integer(((Byte)x).byteValue() & 0xFF);
+                   } else  {
+                       long val;
+                       if (x instanceof Number) {
+                           val = ((Number)x).longValue();
+                       } else if (x instanceof String) {
+                           val = new Long(((String) x).trim()).longValue();
+                       } else {
+                           break;
+                       }
+                       if (val < Byte.MIN_VALUE || val > Byte.MAX_VALUE) {
+                           throw new SQLException(Messages.get("error.convert.numericoverflow", x, getJdbcTypeName(jdbcType)), "22003");
+                       } else {
+                           return new Integer(new Long(val).intValue());
+                       }
+                   }
+
+               case java.sql.Types.SMALLINT:
+                   if (x instanceof Boolean) {
+                       return ((Boolean) x).booleanValue() ? INTEGER_ONE : INTEGER_ZERO;
+                   } else if (x instanceof Short) {
+                       return new Integer(((Short)x).shortValue());
+                   } else if (x instanceof Byte) {
+                       return new Integer(((Byte)x).byteValue() & 0xFF);
+                   } else  {
+                       long val;
+                       if (x instanceof Number) {
+                           val = ((Number)x).longValue();
+                       } else if (x instanceof String) {
+                           val = new Long(((String) x).trim()).longValue();
+                       } else {
+                           break;
+                       }
+                       if (val < Short.MIN_VALUE || val > Short.MAX_VALUE) {
+                           throw new SQLException(Messages.get("error.convert.numericoverflow", x, getJdbcTypeName(jdbcType)), "22003");
+                       } else {
+                           return new Integer(new Long(val).intValue());
+                       }
+                   }
+
+               case java.sql.Types.INTEGER:
+                   if (x instanceof Integer) {
+                       return x;
+                   }
+                   else if (x instanceof Boolean) {
+                       return ((Boolean) x).booleanValue() ? INTEGER_ONE : INTEGER_ZERO;
+                   } else if (x instanceof Short) {
+                       return new Integer(((Short)x).shortValue());
+                   } else if (x instanceof Byte) {
+                       return new Integer(((Byte)x).byteValue() & 0xFF);
+                   } else  {
+                       long val;
+                       if (x instanceof Number) {
+                           val = ((Number)x).longValue();
+                       } else if (x instanceof String) {
+                           val = new Long(((String) x).trim()).longValue();
+                       } else {
+                           break;
+                       }
+                       if (val < Integer.MIN_VALUE || val > Integer.MAX_VALUE) {
+                           throw new SQLException(Messages.get("error.convert.numericoverflow", x, getJdbcTypeName(jdbcType)), "22003");
+                       } else {
+                           return new Integer(new Long(val).intValue());
+                       }
+                   }
+
+               case java.sql.Types.BIGINT:
+                   if (x instanceof BigDecimal ) {
+                       BigDecimal val = (BigDecimal) x;
+                       if (val.compareTo(MIN_VALUE_LONG_BD) < 0 || val.compareTo(MAX_VALUE_LONG_BD) > 0) {
+                           throw new SQLException(Messages.get("error.convert.numericoverflow", x, getJdbcTypeName(jdbcType)), "22003");
+                       } else {
+                           return new Long(val.longValue());
+                       }
+                   } else if (x instanceof Long) {
+                       return x;
+                   } else if (x instanceof Boolean) {
+                       return ((Boolean) x).booleanValue() ? LONG_ONE : LONG_ZERO;
+                   } else if (x instanceof Byte) {
+                       return new Long(((Byte)x).byteValue() & 0xFF);
+                   } else if (x instanceof BigInteger) {
+                       BigInteger val = (BigInteger) x;
+                       if (val.compareTo(MIN_VALUE_LONG_BI) < 0 || val.compareTo(MIN_VALUE_LONG_BI) > 0) {
+                           throw new SQLException(Messages.get("error.convert.numericoverflow", x, getJdbcTypeName(jdbcType)), "22003");
+                       } else {
+                           return new Long(val.longValue());
+                       }
+                   } else if (x instanceof Number) {
+                       return new Long(((Number) x).longValue());
+                   } else if (x instanceof String) {
+                       return new Long(((String) x).trim());
+                   } else {
+                       break;
+                   }
 
                 case java.sql.Types.REAL:
-                    if (x == null) {
-                        return FLOAT_ZERO;
-                    } else if (x instanceof Float) {
+                    if (x instanceof Float) {
                         return x;
                     } else if (x instanceof Byte) {
                         return new Float(((Byte)x).byteValue() & 0xFF);
@@ -234,9 +333,7 @@ class Support {
 
                 case java.sql.Types.FLOAT:
                 case java.sql.Types.DOUBLE:
-                    if (x == null) {
-                        return DOUBLE_ZERO;
-                    } else if (x instanceof Double) {
+                    if (x instanceof Double) {
                         return x;
                     } else if (x instanceof Byte) {
                         return new Double(((Byte)x).byteValue() & 0xFF);
@@ -252,9 +349,7 @@ class Support {
 
                 case java.sql.Types.NUMERIC:
                 case java.sql.Types.DECIMAL:
-                    if (x == null) {
-                        return null;
-                    } else if (x instanceof BigDecimal) {
+                    if (x instanceof BigDecimal) {
                         return x;
                     } else if (x instanceof Number) {
                         return new BigDecimal(x.toString());
@@ -269,9 +364,7 @@ class Support {
                 case 2009:
                 case java.sql.Types.VARCHAR:
                 case java.sql.Types.CHAR:
-                    if (x == null) {
-                        return null;
-                    } else if (x instanceof String) {
+                    if (x instanceof String) {
                         return x;
                     } else if (x instanceof Number) {
                         return x.toString();
@@ -307,9 +400,7 @@ class Support {
 
                 case java.sql.Types.BIT:
                 case java.sql.Types.BOOLEAN:
-                    if (x == null) {
-                        return Boolean.FALSE;
-                    } else if (x instanceof Boolean) {
+                    if (x instanceof Boolean) {
                         return x;
                     } else if (x instanceof Number) {
                         return(((Number) x).intValue() == 0) ? Boolean.FALSE : Boolean.TRUE;
@@ -323,9 +414,7 @@ class Support {
 
                 case java.sql.Types.VARBINARY:
                 case java.sql.Types.BINARY:
-                    if (x == null) {
-                        return null;
-                    } else if (x instanceof byte[]) {
+                    if (x instanceof byte[]) {
                         return x;
                     } else if (x instanceof Blob) {
                         Blob blob = (Blob) x;
@@ -362,9 +451,7 @@ class Support {
                     break;
 
                 case java.sql.Types.TIMESTAMP:
-                    if (x == null) {
-                        return null;
-                    } else if (x instanceof DateTime) {
+                    if (x instanceof DateTime) {
                         return ((DateTime) x).toTimestamp();
                     } else if (x instanceof java.sql.Timestamp) {
                         return x;
@@ -379,9 +466,7 @@ class Support {
                     break;
 
                 case java.sql.Types.DATE:
-                    if (x == null) {
-                        return null;
-                    } else if (x instanceof DateTime) {
+                    if (x instanceof DateTime) {
                         return ((DateTime) x).toDate();
                     } else if (x instanceof java.sql.Date) {
                         return x;
@@ -396,9 +481,7 @@ class Support {
                     break;
 
                 case java.sql.Types.TIME:
-                    if (x == null) {
-                        return null;
-                    } else if (x instanceof DateTime) {
+                    if (x instanceof DateTime) {
                         return ((DateTime) x).toTime();
                     } else if (x instanceof java.sql.Time) {
                         return x;
@@ -423,9 +506,7 @@ class Support {
 
                 case java.sql.Types.LONGVARBINARY:
                 case java.sql.Types.BLOB:
-                    if (x == null) {
-                        return null;
-                    } else if (x instanceof Blob) {
+                    if (x instanceof Blob) {
                         return x;
                     } else if (x instanceof byte[]) {
                         return new BlobImpl(connection, (byte[]) x);
@@ -483,9 +564,7 @@ class Support {
 
                 case java.sql.Types.LONGVARCHAR:
                 case java.sql.Types.CLOB:
-                    if (x == null) {
-                        return null;
-                    } else if (x instanceof Clob) {
+                    if (x instanceof Clob) {
                         return x;
                     } else if (x instanceof Blob) {
                         //
